debugging UserDetailsImpl